start converting the base routing to swagger data driven routing NOT WORKING YET